--- a/MobileShop/MobileShop.csproj
+++ b/MobileShop/MobileShop.csproj
@@ -2217,7 +2217,7 @@
     <Content Include="assets\js\validator.js" />
     <Content Include="assets\logo\favicon-32x32.png" />
     <Content Include="assets\logo\favicon.ico" />
-    <Content Include="assets\logo\logo.png" />
+    <Content Include="assets\logo\ptmobile.png" />
     <Content Include="ChiTietSanPham.aspx" />
     <Content Include="DangKy.aspx" />
     <Content Include="DangNhap.aspx" />
